# IYDC_uav_ws

./: .gitignore  .gitmodules  README.md  README_test.md  readme.md
.catkin_tools/default/: build.yaml  config.yaml
configure/: .run.sh.swo  FangLinXuINVS.params  README.md  head_camera.yaml  log_in.sh  px4fmu-v2_lpe.px4  run.sh  uav_parameter_INVS.params
install/: .rosinstall  _setup_util.py  setup.sh
install/include/detect_track/: ControlDetection.h  ControlDetectionRequest.h  ControlDetectionResponse.h
install/include/ros_common/: RosImageToMat.h
install/share/detect_track/: package.xml
src/application/IYDC_tasks/: CMakeLists.txt  package.xml
src/application/competition_tasks/: CMakeLists.txt  README.md  package.xml
src/application/object_detection/: CMakeLists.txt  readme.md
src/application/object_tracking/: CMakeLists.txt  package.xml
src/common/: RosImageToMat.cpp  RosImageToMat.h  RosMessageSubAndPub.cpp  RosMessageSubAndPub.h
src/common/map_world_convert/: CMakeLists.txt
src/common/map_world_convert/launch/: map_world_convert.launch
src/common/map_world_convert/src/: map_world_convert.cpp
src/common/ros_common/: CMakeLists.txt
src/control/uav_controller/: README.md  (+2 more)
src/device_driver/: README.md  readme.md
src/uav_navigation/slam/orb_slam/: CMakeLists.txt  package.xml
src/uav_navigation/slam/orb_slam/launch/: test_fix_point.launch  uav_mocap_test.launch
src/uav_navigation/slam/orb_slam/src/: .set_point.cpp.swp
src/uav_navigation/slam/orb_slam/test/: test_fix_point.cpp  test_mavros_vel_control.cpp
src/vision_task/: README.md
(+135 files in other folders)
